# semester_project

depth_flight_controller/include/: max_depth_finder.h  target_finder.h
depth_flight_controller/src/: sample_path.txt  snap_trajectory_planner.cpp
depth_flight_controller_common/: CMakeLists.txt  package.xml
depth_flight_controller_common/include/: c_space_expander.h  c_space_expander_horizon.h  cmd_vel_transformer.h  image_clipper.h  image_prep.h  snap_trajectory_planner.h
depth_flight_controller_common/src/: body_cmd_vel_publisher.cpp  c_space_expander.cpp  c_space_expander_horizon.cpp  cmd_vel_transformer.cpp  image_clipper.cpp  image_prep.cpp
depth_flight_controller_dubins_path/: CMakeLists.txt  package.xml
depth_flight_controller_dubins_path/Backup/: desired_state_publisher_backup.cpp  horizon_plotter_backup.cpp
depth_flight_controller_dubins_path/include/: desired_state_publisher.h  desired_state_publisher_yaw_adjustment.h  target_finder.h
depth_flight_controller_dubins_path/launch/: depth_flight_controller_close_loop_launch.launch  depth_flight_controller_dubins_path.launch  depth_flight_controller_launch.launch
depth_flight_controller_dubins_path/src/: c_space_expander.cpp  desired_state_publisher.cpp  desired_state_publisher_yaw_adjustment.cpp  target_finder.cpp
depth_flight_controller_minimum_snap/: CMakeLists.txt  original_img.txt  package.xml
depth_flight_controller_minimum_snap/Backup/: desired_state_publisher_backup_13_12.cpp
depth_flight_controller_minimum_snap/include/: c_space_expander.h  snap_trajectory_planner.h
depth_flight_controller_minimum_snap/launch/: depth_flight_controller_minimum_snap.launch  depth_flight_controller_minimum_snap_horizon.launch
depth_flight_controller_minimum_snap/src/: cmd_vel_transformer.cpp  horizon_plotter.cpp  snap_trajectory_planner.cpp  target_finder.cpp
depth_flight_controller_msgs/: CMakeLists.txt  package.xml
depth_flight_controller_msgs/msg/: HorizonPoints.msg  ImagePose.msg  PathPosition.msg  PathPositions.msg  Target.msg
depth_flight_controller_p_control/: CMakeLists.txt  package.xml
depth_flight_controller_p_control/include/: desired_state_publisher.h  horizon_plotter.h  path_planner.h
depth_flight_controller_p_control/msgs/: HorizonPoints.msg
depth_flight_controller_p_control/src/: find_max_depth.cpp  horizon_plotter.cpp  image_clipper.cpp  image_prep.cpp  max_depth_finder.cpp  path_planner.cpp  target_finder.cpp  trajectory_planner.cpp
first python node/: CMakeLists.txt  package.xml
first python node/launch/: depth_navigation_launch.launch
first python node/src/: move_drone.py  twist_to_twiststamp.py
rqt_image_view/: plugin.xml
rqt_image_view/include/rqt_image_view/: image_view.h
rqt_image_view/src/rqt_image_view/: image_view (copy).ui  image_view.cpp  image_view.ui
worlds/: corridor.world  model.config  pillarforest.world  test.world
worlds/materials/scripts/: my_wall.material
