<?xml version="1.0"?>
<package format="2">
  <name>depth_flight_controller_dubins_path</name>
  <version>0.0.0</version>
  <description>The depth_flight_controller_dubins_path package</description>

  <maintainer email="nilsiism@todo.todo">nilsiism</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>quad_common</depend>
  <depend>quad_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv2</depend>
  <depend>sensor_msgs</depend>

    <export>

  </export>
</package>